	methods to Win32 in 'sy/syrouting.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Implemented 'SySyslog()' to output messages to stderr on Win32
	in 'sy/sysyslog.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Ported the 'SyRouting::LoadInterfaces()' method to Win32 in
	'sy/syrouting.cpp'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRouting::socketErrorString()' method in
	'sy/syrouting.cpp' and 'sy/syrouting.h'.
2014-09-28 Fred Gleason <fredg@paravelsystems.com>
	* Ported the 'SyRouting::load()' and SyRouting::save()' methods to
	Win32 in 'sy/syrouting.cpp'.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Addded SWITCHYARD_SETTINGS_ORGANIZATION and
	SWITCHYARD_SETTINGS_APPLICATION defines in 'sy/syconfig.h'.
	* Ported source database generation to Win32 in 'sy/syadv_server.cpp'
	* Ported source database reading to Win32 in 'sy/syadv_reader.cpp'
2015-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/syrouting.cpp' that broke saving of destination
	information to the routing database.
	* Changed SYD_SLOTS in 'tests/syd.h' to '4'.
2015-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'FASM' tag to set of recognized tags when parsing 'SRC'
	commands in 'sy/sylwrp_server.cpp'.
2015-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Moved syd(8) from 'noinst' to 'sbin' in 'tests/Makefile.am'.
	* Modified to 'make rpm' target in 'Makefile.am' to use a home
	directory based RPM build tree.
2015-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Moved syd(8) from 'sbin' to 'noinst' in 'tests/Makefile.am'.
	* Fixed a bug in 'sy/syrtp_server.cpp' that caused RTP subscriptions
	to not be made if no source slots were configured.
	* Added sycapture(8) in 'tests/sycapture.cpp' and 'test/sycapture.h'.
2015-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored SyAdvServer' to transmit advertising updates correctly
	in 'sy/syadv_server.cpp' and 'sy/syadv_server.h'.